@@ -1,5 +1,7 @@
 2013-01-03  Simson Garfinkel  <simsong@Mucha.local>
 
+	* src/tcpflow.cpp (main): opt_gzip_decompress renamed to gzip_decompress and implemented.
+
 	* src/flow.cpp (flow::new_filename): now automatically makes subdirectories if necessary
 
 2013-01-02  Simson Garfinkel  <simsong@mncrnpsedu.local>
